# medguard-paper

./: CLAUDE.md  LICENSE  README.md
medguard-evaluation/: .env.example  .gitignore  Makefile  README.md  chat.py  pyproject.toml
medguard-evaluation/evals/: eval_reasoning.py  eval_reasoning_ground_truth.py  eval_self_critique.py  score_eval_reasoning_ground_truth.py
medguard-evaluation/medguard/agents/: utils.py
medguard-evaluation/medguard/analysis/: README.md  __init__.py  base.py  complexity_correlation.py  failure_mode_analysis.py  figure_1_composite.py  figure_2.html  filters.py  model_comparison.py  utils.py  vignettes_combined.html  workflow_flowchart.html  workflow_flowchart_primary.html  workflow_flowchart_secondary.html
medguard-evaluation/medguard/app/: README.md
medguard-evaluation/medguard/data_ingest/: __init__.py  mappings.py  record_to_sample.py  utils.py
medguard-evaluation/medguard/evaluation/: calibration_metrics.py  evaluation.py  evaluation_metrics.py  failure_themes.py  main.py  pipeline.py  themefinder.py  utils.py
medguard-evaluation/medguard/ground_truth/: examples.py  main.py  models.py  utils.py
medguard-evaluation/medguard/sanitise/: __init__.py  analysed_patient_records.py  eval_log.py  patient_profile.py
medguard-evaluation/medguard/scorer/: models.py  utils.py
medguard-evaluation/medguard/tools/: __init__.py  bnf_interaction.py  bnf_profile.py  ddinter.py  models.py  nice.py  pubmed.py
medguard-evaluation/medguard/utils/: parsing.py
medguard-evaluation/medguard/vignette/: __init__.py  html_generator.py  markdown_generator.py  models.py  pipeline.py
medguard-evaluation/outputs/eval_analyses/: complexity_correlation.csv  evaluation_metrics_dump.txt  expert_pincer_comparison.csv  expert_pincer_contingency.csv  failure_mode_analysis.csv  failure_mode_confusion_matrix.csv  figure_1_composite.csv  ground_truth_binary_metrics.csv  issue_precision_distribution.csv  model_comparison.csv  pairwise_agreement.csv  performance_by_complexity.csv  performance_by_complexity_boxplot.csv  performance_by_ethnicity.csv  performance_by_filter_clinician.csv  performance_summary.txt  performance_summary_100.txt  pincer_binary_metrics.csv  population_metrics.csv  score_by_month.csv  score_by_year.csv  self_consistency.csv  self_consistency_combined.csv  self_consistency_scorer.csv  vignette_failure_mode_counts.csv  vignette_failure_mode_summary.txt
medguard-evaluation/scripts/: create_combined_dataset.py  generate_all_vignettes.py  generate_analyses.py  generate_evaluation.py  generate_failure_vignettes.py  generate_ground_truth.py  generate_vignette_with_analysis.py  generate_vignettes.py  get_patients_by_category.py  verify_metrics.py
medguard-preprocessing/: .gitignore  README.md  pyproject.toml
medguard-preprocessing/outputs/statistics/: active_medications_per_elderly_patient_distribution.csv  gp_events_date_range.csv  (+23 more)
medguard-preprocessing/scripts/: generate_all_plots.py  generate_eda_report.py  generate_no_filter_patient_profiles.py  generate_patient_profiles.py  generate_patient_profiles_with_filters.py  generate_patient_schema.py  generate_patient_subset.py  run_statistics_analyses.py
(+176 files in other folders)
