[project]
name = "medguard"
version = "0.0.1"
description = "An AI powered medication review and evaluation toolkit."
authors = [
    { name = "i.AI", email = "i-dot-ai-enquiries@cabinetoffice.gov.uk" }
]
readme = "README.md"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "playwright>=1.49.0",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "inspect-ai>=0.3.99",
    "instructor>=1.7.9",
    "kaleido>=1.1.0",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "polars>=1.34.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.3",
    "python-levenshtein>=0.27.1",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=79.0.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.10.0",
    "uvicorn>=0.35.0",
    "xmltodict>=0.14.2",
]
requires-python = "==3.10.17"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
]
plotting = [
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
reinforcement-learning = [
    "setuptools>=79.0.1",
    "torch>=2.6.0",
    "unsloth>=2025.6.1",
    "vllm>=0.8.5.post1",
    "wandb>=0.20.1",
]
xgboost = [
    "graphviz>=0.21",
    "scikit-learn>=1.7.0",
    "shap>=0.48.0",
    "xgboost>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
