[project]
name = "medguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "fuzzywuzzy>=0.18.0",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-levenshtein>=0.27.1",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "streamlit>=1.48.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
    "xlsxwriter>=3.2.5",
]

[project.scripts]
medguard = "medguard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
